# arx

./: .gitignore  LICENSE  Makefile  README  Setup.hs  arx.cabal  arx.hs  sign-arx.bash
System/Posix/: ARX.hs
System/Posix/ARX/: BlazeIsString.hs  CLI.hs  CLITokens.hs  CLTokens.hs  HEREDat.hs  Options.hs  Programs.hs  Sh.hs  TMPX.hs  TMPXTools.hs  Tar.hs
System/Posix/ARX/CLI/: CLTokens.hs  Options.hs
binary-heredoc-example/: all-byte-pairs.sh
docs/: Makefile  conf.py  index.rst  make.bat
docs/blessed/: arx.man  arx.txt
linux-static/: link.sh
model-scripts/: screen.sh  tmpx.sh
model-scripts/binary-heredoc/: README  xxdiff.bash
ubuntu/: compile-and-gen-linker-line.bash  link.sh
