name                          : arx
version                       : 0.0.0
category                      : Text
license                       : BSD3
license-file                  : LICENSE
author                        : Jason Dusek
maintainer                    : oss@solidsnack.be
homepage                      : http://github.com/solidsnack/arx/
synopsis                      : Archive execution tool.
description                   : Archive execution tool.

cabal-version                 : >= 1.6
build-type                    : Simple
extra-source-files            : README
                              , LICENSE
                              , docs/blessed/arx.man
                              , docs/blessed/arx.txt

source-repository               head
  type                        : git
  location                    : http://github.com/solidsnack/arx.git


flag no-cli
  description                 : Disable command line tool.
  default                     : False


library
  build-depends               : base >= 2 && <= 5
                              , bytestring >= 0.9
                              , containers
                              , attoparsec >= 0.9.1.2
                              , blaze-builder >= 0.3
                              , bytestring-nums >= 0.3.3
                              , bzlib >= 0.5
                              , file-embed >= 0.0.4.1
                              , parsec >= 3.1.2
                              , process >= 1.0
                              , shell-escape >= 0.1.1
                              , template-haskell
                              , Unixutils >= 1.36
                              , vector >= 0.9
                              , vector-algorithms >= 0.5.3
  exposed-modules             : System.Posix.ARX
                                System.Posix.ARX.CLI
                                System.Posix.ARX.CLI.CLTokens
                                System.Posix.ARX.CLI.Options
                                System.Posix.ARX.HEREDat
                                System.Posix.ARX.Programs
                                System.Posix.ARX.Sh
                                System.Posix.ARX.Tar
                                System.Posix.ARX.TMPXTools
  extensions                  : FlexibleInstances
                                OverloadedStrings
                                StandaloneDeriving
                                TupleSections
                                TypeFamilies


executable                      arx
  main-is                     : arx.hs
  if flag(no-cli)
    buildable                 : False
  else
    buildable                 : True
  build-depends               : base >= 2 && <= 5
                              , bytestring >= 0.9
                              , containers
                              , attoparsec >= 0.9.1.2
                              , blaze-builder >= 0.3
                              , bytestring-nums >= 0.3.3
                              , bzlib >= 0.5
                              , file-embed >= 0.0.4.1
                              , parsec >= 3.1.2
                              , process >= 1.0
                              , shell-escape >= 0.1.1
                              , template-haskell
                              , Unixutils >= 1.36
                              , vector >= 0.9
                              , vector-algorithms >= 0.5.3
  extensions                  : FlexibleInstances
                                OverloadedStrings
                                StandaloneDeriving
                                TupleSections
                                TypeFamilies

