name                          : arx
version                       : 0.0.3
category                      : Text
license                       : BSD3
license-file                  : LICENSE
author                        : Jason Dusek
maintainer                    : oss@solidsnack.be
homepage                      : http://github.com/solidsnack/arx/
synopsis                      : Archive execution tool.
description                   :
  The @ARX@ system provides services for packaging, deploying and running
  source code. No particular format or framework is needed -- a directory of
  code and a command to run are enough. The system has no in-built notion of
  remote connections, job servers or clusters; all automation is captured as
  Bourne compatible scripts.
  .
  An archive of the source code, a command and optionally an environment are
  encoded together in a Bourne shell script that uses a small number of UNIX
  utilities in a broadly portable way. The generated scripts can be run
  directly or fed to @sh@ on STDIN. This latter feature is useful when one
  would like to use @ssh@ and @sudo@ to set an appropriate executation
  context, for example running: @ssh user\@example.com sudo sh@.
  .
  The shell tools used are @head@, @sed@, @date@, @tr@ and @tar@. The calls to
  @tar@ sometimes use @-j@ and @-z@; these calls to @tar@ may result in calls
  to @bzip2@ and @gzip@. Scripts have been tested with @dash@ and the GNU
  tools as well as the @sh@ and tools that are part of @busybox@.
  .
  The @arx@ command line tool provides the @tmpx@ subcommand for preparing
  jobs to run and the @shdat@ subcommand for access to the low-level shell
  encoder. The @System.Posix.ARX@ module provides access to the routines used
  for constructing commands and environments, describing archives and building
  Bourne shell scripts.
  .
  One way I have used @arx@ is to test the Cabal source archive for this
  package:
  .
  @
  arx tmpx .\/dist\/arx-* \/\/ 'cd arx-* && cabal configure && cabal build' | sh
  @
  .
  There are binary @arx@ command line tool releases available from:
  .
    <https://github.com/solidsnack/arx/downloads>
  .
  For each supported platform, there is an archive containing @arx@ and
  signature files (SHA 512 and GPG).

cabal-version                 : >= 1.6
build-type                    : Simple
extra-source-files            : README
                              , LICENSE
                              , docs/blessed/arx.man
                              , docs/blessed/arx.txt
                              , model-scripts/tmpx.sh
                              , System/Posix/ARX/BlazeIsString.hs

source-repository               head
  type                        : git
  location                    : http://github.com/solidsnack/arx.git


flag no-cli
  description                 : Disable command line tool.
  default                     : False


library
  build-depends               : base >= 2 && <= 5
                              , bytestring >= 0.9
                              , containers
                              , attoparsec >= 0.9.1.2
                              , blaze-builder >= 0.3
                              , bytestring-nums >= 0.3.3
                              , file-embed >= 0.0.4.1
                              , parsec >= 3.1.2
                              , process >= 1.0
                              , shell-escape >= 0.1.1
                              , template-haskell
                              , vector >= 0.9
                              , vector-algorithms >= 0.5.3
  exposed-modules             : System.Posix.ARX
                                System.Posix.ARX.CLI
                                System.Posix.ARX.CLI.CLTokens
                                System.Posix.ARX.CLI.Options
                                System.Posix.ARX.HEREDat
                                System.Posix.ARX.Programs
                                System.Posix.ARX.Sh
                                System.Posix.ARX.Tar
                                System.Posix.ARX.TMPXTools
  extensions                  : FlexibleInstances
                                FunctionalDependencies
                                MultiParamTypeClasses
                                OverloadedStrings
                                StandaloneDeriving
                                TupleSections


executable                      arx
  main-is                     : arx.hs
  if flag(no-cli)
    buildable                 : False
  else
    buildable                 : True
  build-depends               : base >= 2 && <= 5
                              , bytestring >= 0.9
                              , containers
                              , attoparsec >= 0.9.1.2
                              , blaze-builder >= 0.3
                              , bytestring-nums >= 0.3.3
                              , file-embed >= 0.0.4.1
                              , parsec >= 3.1.2
                              , process >= 1.0
                              , shell-escape >= 0.1.1
                              , template-haskell
                              , vector >= 0.9
                              , vector-algorithms >= 0.5.3
  extensions                  : FlexibleInstances
                                FunctionalDependencies
                                MultiParamTypeClasses
                                OverloadedStrings
                                StandaloneDeriving
                                TupleSections

